@@ -4,12 +4,14 @@
  <permission>Delete objects</permission>
  <permission>Modify portal content</permission>
  <permission>View</permission>
+
  <state state_id="content_pending" title="Pending (publishing review)">
   <description>Content pending internal review before publishing.</description>
   <exit-transition transition_id="publish"/>
   <exit-transition transition_id="publishEionet"/>
   <exit-transition transition_id="reject"/>
   <exit-transition transition_id="show"/>
+  <exit-transition transition_id="fake_publish"/>
   <permission-map name="Access contents information" acquired="False">
    <permission-role>ContentManager</permission-role>
    <permission-role>Editor</permission-role>
@@ -34,10 +36,12 @@
    <permission-role>WebReviewer</permission-role>
   </permission-map>
  </state>
+
  <state state_id="draft" title="First draft">
   <description>This is the first state when a new item is created</description>
   <exit-transition transition_id="publishEionet"/>
   <exit-transition transition_id="quickPublish"/>
+  <exit-transition transition_id="fake_publish"/>
   <exit-transition transition_id="show"/>
   <exit-transition transition_id="submitContentReview"/>
   <permission-map name="Access contents information" acquired="False">
@@ -69,6 +73,7 @@
    <permission-role>WebReviewer</permission-role>
   </permission-map>
  </state>
+
  <state state_id="published" title="Published">
   <exit-transition transition_id="hide"/>
   <exit-transition transition_id="retract"/>
@@ -88,9 +93,11 @@
    <permission-role>Anonymous</permission-role>
   </permission-map>
  </state>
+
  <state state_id="published_eionet" title="Restricted to Eionet (Circa login)">
   <description>This state will make the content available to visitor with Eionet/Circa login.</description>
   <exit-transition transition_id="publish"/>
+  <exit-transition transition_id="fake_publish"/>
   <exit-transition transition_id="retract"/>
   <exit-transition transition_id="show"/>
   <permission-map name="Access contents information" acquired="True">
@@ -112,6 +119,7 @@
    <permission-role>Manager</permission-role>
   </permission-map>
  </state>
+
  <state state_id="retracted" title="Retracted">
   <description>Items in this state have been retracted from one of the publishing state due to discovered relevant errors in content.</description>
   <exit-transition transition_id="enable"/>
@@ -130,8 +138,10 @@
    <permission-role>ContentManager</permission-role>
   </permission-map>
  </state>
+
  <state state_id="visible" title="Public draft (visible only with direct link)">
   <description>Item still visible with direct link, but hidden is searches and listings on the site. Usable for external light reviews with no login required.</description>
+  <exit-transition transition_id="fake_publish"/>
   <exit-transition transition_id="publish"/>
   <exit-transition transition_id="retract"/>
   <exit-transition transition_id="simpleSubmit"/>
@@ -161,6 +171,19 @@
    <guard-role>Manager</guard-role>
   </guard>
  </transition>
+
+ <transition transition_id="fake_publish"
+             title="Pre-publish check" new_state=""
+             trigger="USER" before_script="fake_transition"
+             after_script="">
+  <action url="" category="workflow">Publish</action>
+  <guard>
+   <guard-role>Manager</guard-role>
+   <guard-role>Reviewer</guard-role>
+   <guard-expression>python:not path('here/@@get_readiness').is_ready_for('published')</guard-expression>
+  </guard>
+ </transition>
+
  <transition transition_id="hide" title="Hide item from search and listings (Unpublish)" new_state="visible" trigger="USER" before_script="" after_script="">
   <description>Content still available via direct link, but hidden in listings and searches.</description>
   <action url="" category="workflow" icon="">Hide item from search and listings (Unpublish)</action>
@@ -169,13 +192,16 @@
    <guard-role>Manager</guard-role>
   </guard>
  </transition>
+
  <transition transition_id="publish" title="Publish" new_state="published" trigger="USER" before_script="" after_script="sendWorkflowEmail">
   <action url="" category="workflow" icon="">Publish</action>
   <guard>
    <guard-role>Reviewer</guard-role>
    <guard-role>Manager</guard-role>
+   <guard-expression>python:path('here/@@get_readiness').is_ready_for('published')</guard-expression>
   </guard>
  </transition>
+
  <transition transition_id="publishEionet" title="Restrict to Eionet members (login required)" new_state="published_eionet" trigger="USER" before_script="" after_script="sendWorkflowEmail">
   <description>Makes item visible for users with Eionet/Circa login</description>
   <action url="" category="workflow" icon="">Restrict to Eionet members (login required)</action>
@@ -185,13 +211,16 @@
    <guard-role>Manager</guard-role>
   </guard>
  </transition>
+
  <transition transition_id="quickPublish" title="Publish" new_state="published" trigger="USER" before_script="" after_script="">
   <action url="" category="workflow" icon="">Publish</action>
   <guard>
    <guard-role>Reviewer</guard-role>
    <guard-role>Manager</guard-role>
+   <guard-expression>python:path('here/@@get_readiness').is_ready_for('published')</guard-expression>
   </guard>
  </transition>
+
  <transition transition_id="reject" title="Back for revision" new_state="draft" trigger="USER" before_script="" after_script="sendWorkflowEmail">
   <action url="" category="workflow" icon="">Back for revision</action>
   <guard>
@@ -199,12 +228,14 @@
    <guard-role>Reviewer</guard-role>
   </guard>
  </transition>
+
  <transition transition_id="retract" title="Retract" new_state="retracted" trigger="USER" before_script="" after_script="">
   <action url="" category="workflow" icon="">Retract</action>
   <guard>
    <guard-role>Manager</guard-role>
   </guard>
  </transition>
+
  <transition transition_id="show" title="Make visible only via direct link, still hidden in listings/search" new_state="visible" trigger="USER" before_script="" after_script="sendWorkflowEmail">
   <description>This will make the item visible with direct link, but not show up in listings.</description>
   <action url="" category="workflow" icon="">Make visible only via direct link, still hidden in listings/search</action>
@@ -214,6 +245,7 @@
    <guard-role>Manager</guard-role>
   </guard>
  </transition>
+
  <transition transition_id="simpleSubmit" title="Submit for final publishing" new_state="" trigger="USER" before_script="" after_script="sendWorkflowEmail">
   <description>This workflow action will not change state. It will just notify for publishing.</description>
   <action url="" category="workflow" icon="">Submit for final publishing</action>
@@ -222,6 +254,7 @@
    <guard-expression>python: here.portal_type in  ['Data', 'EEAFigure','EEAFigureFile'] and here.Language() == 'en'</guard-expression>
   </guard>
  </transition>
+
  <transition transition_id="submitContentReview" title="Submit for internal peer review" new_state="content_pending" trigger="USER" before_script="" after_script="sendWorkflowEmail">
   <action url="%(content_url)s/content_submit_form" category="workflow" icon="">Submit for internal peer review</action>
   <guard>
@@ -229,6 +262,7 @@
    <guard-expression>python: here.portal_type in  ['Data', 'EEAFigure'] and here.Language() == 'en'</guard-expression>
   </guard>
  </transition>
+
  <worklist worklist_id="contentReview" title="">
   <description>For content review</description>
   <action url="" category="global" icon="">Content review pennding</action>
@@ -306,4 +340,9 @@
  <script script_id="submitForContentReview" type="External Method" filename="" module="EEAContentTypes.frontpage_workflow_scripts" function="submitForContentReview"/>
  <script script_id="submitForProofReading" type="External Method" filename="" module="EEAContentTypes.frontpage_workflow_scripts" function="submitForProofReading"/>
  <script script_id="submitForWebQA" type="External Method" filename="" module="EEAContentTypes.frontpage_workflow_scripts" function="submitForWebQA"/>
+
+ <script script_id="fake_transition" type="External Method"
+         filename="" module="eea.workflow.workflow_scripts"
+         function="fake_transition"/>
+
 </dc-workflow>
