@@ -3,6 +3,7 @@ Changelog
 
 4.21-dev - (unreleased)
 -----------------------
+ * Feature: use fake_transition in eea_data_workflow [tiberich #5065]
  * Bug fix: Added plone.app.caching rules for Sparql and SparqlBookmarkFolder
    [voineali #5074]
 
